Generate and send incident reports.

--- a/extension/chrome/skin/default/pd-prefs.css
+++ b/extension/chrome/skin/default/pd-prefs.css
@@ -6,3 +6,7 @@
 #pd-prefs-pane groupbox > * {
 	margin-top: 0.5em;
 }
+
+#pd-pref-node-sync-last, #pd-pref-reports-sync-last {
+	font-weight: bold;
+}
