--- a/extension/chrome/skin/default/phishdetect.css
+++ b/extension/chrome/skin/default/phishdetect.css
@@ -1,6 +1,20 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 #pd-notification {
-	background-color: #000000 !important;
+	background-color: #a00000 !important;
 	color: #ffffff !important;
 }
+
+#pd-indications {
+	background-color: #a0a0a0 !important;
+	color: black !important;
+}
+
+#pd-reasons label {
+	border: 1px solid black;
+	background-color: #ffffcc;
+	font-weight: bold;
+	padding: 0.3em;
+	margin: 0.3em;
+}
+
