Re-scan previously processed email with new indicators.
This assumes that the 'fetchIndicator()' call only receives new
indicators since the last sync.

--- a/extension/chrome/skin/default/pd-prefs.css
+++ b/extension/chrome/skin/default/pd-prefs.css
@@ -7,6 +7,6 @@
 	margin-top: 0.5em;
 }
 
-#pd-pref-node-sync-last, #pd-pref-reports-sync-last {
+#pd-pref-node-sync-last, #pd-pref-reports-last {
 	font-weight: bold;
 }
